# smash-hadron-sampler

./: .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  config-example
src/: DatabasePDG2.cpp  gen.cpp  gen.h  main.cpp  oscaroutput.cpp  params.cpp  particle.h  spin.cpp  tree.cpp  vorticity.cpp
src.visc/: cascade.cpp  cascade.h  const.h  gen-test.cpp  gen.cpp  gen.h  hfill.cpp  hfill.h  main.cpp  params.cpp  params.h  tree.cpp  tree.h
src/include/: build_metadata.h.in  const.h  gen.h  oscaroutput.h  params.h  spin.h  tree.h  vorticity.h
tests/: gen.cpp  spin.cpp  vorticity.cpp
